# acts-framework

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  init.sh
Algorithms/: CMakeLists.txt
Algorithms/Digitization/: CMakeLists.txt
Algorithms/Digitization/src/: DigitizationAlgorithm.cpp  DigitizationOptions.cpp  HitSmearing.cpp
Algorithms/Extrapolation/: CMakeLists.txt
Algorithms/Extrapolation/src/: ExtrapolationAlgorithm.cpp
Algorithms/Fatras/: CMakeLists.txt
Algorithms/Fatras/src/: FatrasOptions.cpp  FatrasWriteAlgorithm.cpp  ParticleGun.cpp
Algorithms/FatrasValidation/: CMakeLists.txt
Algorithms/FatrasValidation/src/: G4FatrasValidation.cpp
Algorithms/Finding/: CMakeLists.txt
Algorithms/Finding/src/: TrkrClusterFindingAlgorithmFinderFunction.cpp
Algorithms/Fitting/: CMakeLists.txt
Algorithms/Fitting/src/: FittingAlgorithm.cpp  FittingAlgorithmFitterFunction.cpp  FittingOptions.cpp  TrkrClusterFittingAlgorithmFitterFunction.cpp
Algorithms/Generators/: CMakeLists.txt
Algorithms/HitAnalysis/: CMakeLists.txt
Algorithms/HitAnalysis/src/: HitDistanceAlgorithm.cpp
Algorithms/MaterialMapping/: CMakeLists.txt
Algorithms/MaterialMapping/src/: Geant4MaterialRecording.cpp  GeantinoRecording.cpp  MaterialMapping.cpp  OutcomeRecording.cpp
Algorithms/ParticleGun/: CMakeLists.txt
Algorithms/ParticleGun/src/: ParticleGun.cpp  ParticleGunAlgorithm.cpp
Algorithms/Printers/: CMakeLists.txt
Algorithms/Propagation/: CMakeLists.txt
Algorithms/ReadEvgen/: CMakeLists.txt
Algorithms/ReadEvgen/src/: EvgenReader.cpp  ReadEvgenAlgorithm.cpp
Algorithms/Reconstruction/: CMakeLists.txt
Algorithms/Seeding/: CMakeLists.txt
Algorithms/Simulation/: CMakeLists.txt
Algorithms/Simulation/src/: EventToTrackConverter.cpp
Algorithms/SpacePointFinder/: CMakeLists.txt
Algorithms/SpacePointFinder/src/: SpacePointFinder.cpp
Algorithms/StripSpacePointBuilder/: CMakeLists.txt
Algorithms/StripSpacePointBuilder/src/: StripSpacePointBuilder.cpp
Algorithms/TruthTracking/: CMakeLists.txt
Algorithms/Vertexing/: CMakeLists.txt
Algorithms/Vertexing/src/: VertexFindingAlgorithm.cpp  VertexFitAlgorithm.cpp
Core/: CMakeLists.txt
Core/src/Barcode/: BarcodeSvc.cpp
Core/src/Framework/: Algorithm.cpp  BareAlgorithm.cpp  BareService.cpp  RandomNumbers.cpp  Sequencer.cpp  WhiteBoard.cpp
Core/src/Random/: RandomNumberDistributions.cpp  RandomNumbers.cpp  RandomNumbersSvc.cpp
Core/src/Utilities/: Helpers.cpp  Options.cpp  Paths.cpp
Core/src/Validation/: EffPlotTool.cpp  FakeRatePlotTool.cpp  ProtoTrackClassification.cpp  ResPlotTool.cpp  TrackSummaryPlotTool.cpp  TrajectoryEmulationTool.cpp
Detectors/AlignableDetector/: CMakeLists.txt
Detectors/AtlasITk/: CMakeLists.txt
Detectors/Common/: CMakeLists.txt  DetectorElementParent.hpp
Detectors/ContextualDetector/: CMakeLists.txt
Detectors/DD4hepDetector/: CMakeLists.txt
Detectors/EmptyDetector/: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/BField/: BFieldExample.cpp  BFieldWritingBase.hpp  CMakeLists.txt
Examples/Common/: CMakeLists.txt
Examples/DD4hepExample/: CMakeLists.txt  dd4hepinit.sh
Examples/Digitization/: CMakeLists.txt
Examples/EventGenerator/: CMakeLists.txt  ParticleGun.cpp  Pythia8.cpp
Examples/Extrapolation/: CMakeLists.txt
Examples/ExtrapolationTest/: CMakeLists.txt
Examples/Fatras/: AlignedFatrasExample.cpp  CMakeLists.txt  FatrasCommon.cpp  FatrasCommon.hpp  FatrasGun.cpp  GenericFatrasExample.cpp  PayloadFatrasExample.cpp
Examples/FatrasParticleGun/: CMakeLists.txt
Examples/FatrasValidation/: CMakeLists.txt
Examples/GdmlDetectorTest/: CMakeLists.txt
Examples/Geometry/: AlignedGeometryExample.cpp  CMakeLists.txt
Examples/GeometryBuilding/: CMakeLists.txt  Event.hpp  ExtrapolationExampleBase.hpp  FatrasCommon.cpp  FatrasCommon.hpp  KalmanFitterUtils.hpp
Examples/Gsoc2019/: CMakeLists.txt  Reconstruction.cpp
Examples/HelloWorld/: CMakeLists.txt  HelloData.hpp  HelloLoggerAlgorithm.cpp  HelloLoggerAlgorithm.hpp  HelloRandomAlgorithm.cpp  HelloRandomAlgorithm.hpp  HelloService.cpp  HelloService.hpp  HelloWhiteBoardAlgorithm.cpp  HelloWhiteBoardAlgorithm.hpp  HelloWorld.cpp  HelloWorldAlgorithm.cpp  HelloWorldAlgorithm.hpp  RandomNumbers.cpp  WhiteBoardAlgorithm.cpp
Examples/HepMC3/: HepMC3Example.cpp
Examples/HepMCExample/: CMakeLists.txt  HepMC3Example.cpp
Examples/HitAnalysis/: CMakeLists.txt
Examples/KalmanFitter/: CMakeLists.txt  KalmanFilterTestUtils.hpp  KalmanFilterTests.cpp
Examples/MaterialMapping/: CMakeLists.txt  GenericMaterialMapping.cpp  GenericMaterialValidation.cpp
Examples/MaterialMappingTest/: CMakeLists.txt
Examples/ObjGeometryTest/: CMakeLists.txt
Examples/ParticleGun/: CMakeLists.txt
Examples/Propagation/: CMakeLists.txt  GenericPropagationExample.cpp
Examples/RandomNumbers/: CMakeLists.txt
Examples/ReadCsv/: CMakeLists.txt  GenericReadCsvExample.cpp  PrintHits.cpp  PrintHits.hpp
Examples/ReadEvgen/: CMakeLists.txt
Examples/ReadHepMC/: CMakeLists.txt
Examples/Reconstruction/: CMakeLists.txt  RecTruthTracks.cpp
Examples/TrickTrack/: CMakeLists.txt
Examples/VertexFinder/: CMakeLists.txt
Examples/VertexFitter/: CMakeLists.txt
Examples/Vertexing/: CMakeLists.txt  VertexAndTracksReaderAndFinderExample.cpp  VertexAndTracksWriterExample.cpp  VertexFinderExample.cpp  VertexFitterExample.cpp
Examples/WhiteBoard/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/BField/: CMakeLists.txt
Plugins/Csv/: CMakeLists.txt
Plugins/DD4hep/: CMakeLists.txt
Plugins/DD4hepG4/: CMakeLists.txt
Plugins/DD4hepPlugin/: CMakeLists.txt
Plugins/FCCedm/: CMakeLists.txt
Plugins/Geant4/: CMakeLists.txt
Plugins/Geant4MaterialMapping/: CMakeLists.txt
Plugins/GeoModel/: CMakeLists.txt
Plugins/HepMC/: CMakeLists.txt
Plugins/HepMCReader/: CMakeLists.txt
Plugins/Json/: CMakeLists.txt
Plugins/Pythia8/: CMakeLists.txt
Plugins/Root/: CMakeLists.txt
Plugins/RootMaterialMapping/: CMakeLists.txt
Plugins/RootPythia8/: CMakeLists.txt
Plugins/Txt/: CMakeLists.txt
(+932 files in other folders)
