#add_subdirectory(Digitization)
#add_subdirectory(Extrapolation)
#add_subdirectory(Fatras)

# particle gun and generated event reading 
add_subdirectory(ParticleGun)
add_subdirectory(ReadEvgen)

#add_subdirectory(Propagation)
#add_subdirectory_if(MaterialMapping USE_GEANT4)
#add_subdirectory(TruthTracking)

