add_subdirectory(Csv)
add_subdirectory(Obj)
add_subdirectory(Root)
add_subdirectory(Json)
add_subdirectory(Geant4)
add_subdirectory(DD4hep)
add_subdirectory(DD4hepG4)

#if (PYTHIA8_FOUND)
#  add_subdirectory(RootPythia8)
#else (NOT PYTHIA8_FOUND)
#message (STATUS "${Red}PYTHIA8 was not found -> skip building of RootPythia8 plugin${ColorReset}")
#endif (PYTHIA8_FOUND)

#add_subdirectory(DD4hepPlugin)
#add_subdirectory(DD4hepG4)
#add_subdirectory(Geant4MaterialMapping)
#if (PYTHIA8_FOUND)
#  add_subdirectory(RootPythia8)
#else (NOT PYTHIA8_FOUND)
#message (STATUS "${Red}PYTHIA8 was not found -> skip building of RootPythia8 plugin${ColorReset}")
#endif (PYTHIA8_FOUND)
#if (BUILD_GEANT4_MATERIALMAPPING)
#  add_subdirectory(RootMaterialMapping)
#endif(BUILD_GEANT4_MATERIALMAPPING)
