add_library(ACTFWSeeding INTERFACE)
target_include_directories(ACTFWSeeding INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:include>)
target_include_directories(ACTFWSeeding INTERFACE ActsCore ACTFramework)

install(TARGETS ACTFWSeeding LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(DIRECTORY include/ACTFW DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
